assets/CSS/aboutme.css
body {
    font-family: Georgia, 'Times New Roman', Times, serif; /*set font*/
    font-size: 22px; /*set font size */
    background-color:#030321;
    color: #FFEEEE;
    

   
}

header {
    margin-top: 30px;
    margin-left: 30px;
    margin-right: 30px;
   
}

/* h1 {
    margin: 30px;
    text-align:center;

} */
.title{
    margin-top: 20px;
    display: block;
    text-align: center;
  
}

h3 {
    padding: 20px;
    text-align: center;
    margin-bottom: 20px;
}

h4 {
    text-align: center;
    padding: 20px;
}

/*biography photo */
.img-thumbnail {
    float: left;
    margin-left:20px;
    margin-right: 20px;
    width: 30%;
    border-radius: 10
    px;
}

/*biography text
.bio {
    float:right;
    
}*/

/*navigation bar*/
.navbar {
    background-color: #FFEEEE;
    background: linear-gradient(10deg, #EEDDDD 0%, #FFEEEE 100%);
    box-shadow: 0 0 1em rgba(0,0,0,0.3);
    top: 0;
    width: 100%;
    height: 4.2em;
    z-index: 3;
    text-align: right;
    z-index: 999;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none !important;
 
  }
.navbar-text{
    color: black;
    font-size: 40px;
}
  /*sticky footer */
footer {
    margin-top: 100vh;
    padding: 2em 0;
    background-color: #203b47;
    box-shadow: 0 0 1em rgba(0,0,0,0.6);
    font-weight: 400;
    font-size: 30px;
    text-align: right;
   
 
}

@media screen and (max-width: 767px) {

    
        

    body {
        font-size: 18px;
    } 
    
    }
 

 /*mefia ruqries */
@media screen and (max-width: 480px) {

    body {
        font-size: 18px ;
    
    }
}

